Archive2/e5/85ff17d5a63955/output
main.cpp: In function 'int main()':
main.cpp:33:14: error: no matching function for call to 'B::Choose()'
     b.Choose();
              ^
main.cpp:33:14: note: candidate is:
main.cpp:18:34: note: virtual std::vector<int> B::Choose(double*) const
         virtual std::vector<int> Choose(double* total) const {
                                  ^
main.cpp:18:34: note:   candidate expects 1 argument, 0 provided
